--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head lang="en">
   <meta charset="UTF-8">
-  <title>新生大学</title>
+  <meta content="noindex, nofollow, noimageindex">
+  <link rel="icon" type="image/png" href="https://o4a7cbihz.qnssl.com/picture/57140c0c-4ffa-4dde-9757-570b53f96796" sizes="32x32">
+  <title>欢迎来玩儿</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
@@ -13,12 +15,13 @@
 
 <body>
   <div id="app">
-    <div class="main-header">
+    <div class="header">
       <div class="container">
         <h1>JavaScript编程入门</h1>
+        <h2 style="font-size: 25px;">shasha的小基地，我会每天来施工~</h2>
       </div>
     </div>
-    <div class="container">
+    <div class="col-md-8">
         <div class="panel panel-default">
           <div class="panel-heading">
             <h3 class="panel-title">编程学习初心</h3>
@@ -42,6 +45,10 @@
           </div>
       </div>
     </div>
+    <div class="col-md-4">
+        slide
+    </div>
+
   </div>
 </body>
 
